<?xml version="1.0" encoding="utf-8" ?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/add_supplier"
        android:icon="@drawable/save_disk"
        android:title="@string/add_supplier" />
    <item
        android:id="@+id/action_insert_dummy_data"
        android:title="@string/action_insert_dummy_data"
        app:showAsAction="never" />

    <item
        android:id="@+id/add_books"
        android:icon="@drawable/icon_plus_52"
        android:iconTint="@color/backgroundWhite"
        android:title="@string/add_book" />

    <item
        android:id="@+id/delete_all"
        android:icon="@drawable/icon_delete_bin"
        android:iconTint="@color/backgroundWhite"
        android:title="@string/delete_books"
        app:showAsAction="never" />
</menu>