<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/test"
    android:padding="@dimen/padding_medium"
    tools:context=".SupplierEditorActivity">
    <!-- Input fields -->
    <!-- Name of the supplier field -->
    <TextView
        android:id="@+id/text_supplier_name"
        style="@style/primary_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/edit_supplier_name"
        android:layout_alignParentStart="true"
        android:text="@string/name" />

    <EditText
        android:id="@+id/edit_supplier_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/text_supplier_name"
        android:hint="@string/hint_supplier_name"
        android:inputType="textCapWords"
        android:paddingLeft="@dimen/padding_small" />
    <!-- Phone of supplier field -->
    <TextView
        android:id="@+id/text_supplier_phone"
        style="@style/primary_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/edit_supplier_phone"
        android:text="@string/phone" />

    <EditText
        android:id="@+id/edit_supplier_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_supplier_name"
        android:layout_toRightOf="@id/text_supplier_phone"
        android:hint="@string/hint_supplier_phone"
        android:inputType="textCapWords"
        android:paddingLeft="@dimen/padding_small" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="@dimen/padding_medium"
        android:layout_toLeftOf="@id/save"
        android:src="@drawable/icon_delete_bin"
        android:tint="@color/backgroundWhite" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_margin="@dimen/padding_medium"
        android:src="@drawable/save_disk" />
</RelativeLayout>